2017-06-18  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/81410
	* tree-vect-stmts.c (vectorizable_load): Properly adjust for
	the gap in the ! slp_perm SLP case after each group.

2017-07-18  Jan Hubicka  <hubicka@ucw.cz>

	PR middle-end/81463
	* cfgloopmanip.c (scale_loop_profile): Watch out for zero frequency
	again.

2017-07-18  Jan Hubicka  <hubicka@ucw.cz>

	PR middle-end/81462
	* predict.c (set_even_probabilities): Cleanup; do not affect
	probabilities that are already known.
	(combine_predictions_for_bb): Call even when count is set.

2017-07-18  Nathan Sidwell  <nathan@acm.org>

	* tree-parloops.c (try_transform_to_exit_first_loop_alt): Use
	TYPE_MAX_VALUE.

2017-07-18  Bin Cheng  <bin.cheng@arm.com>

	PR target/81408
	* tree-ssa-loop-niter.c (number_of_iterations_exit): Dump missed
	optimization for loop niter analysis.

2017-07-18  Georg-Johann Lay  <avr@gjlay.de>

	PR target/81473
	* config/avr/avr.c (avr_optimize_casesi): Don't use
	INT8_MIN, INT8_MAX, UINT8_MAX, INT16_MIN, INT16_MAX, UINT16_MAX.

2017-07-18  Robin Dapp  <rdapp@linux.vnet.ibm.com>

        * tree-vect-data-refs.c (vect_enhance_data_refs_alignment): Remove
	body_cost_vec from _vect_peel_extended_info.
	(vect_peeling_hash_get_lowest_cost): Do not set body_cost_vec.
        (vect_peeling_hash_choose_best_peeling): Remove body_cost_vec and
	npeel.

2017-07-18  Bin Cheng  <bin.cheng@arm.com>

	* config/arm/arm.c (emit_unlikely_jump): Remove unused var.

2017-07-18  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/80620
	PR tree-optimization/81403
	* tree-ssa-pre.c (phi_translate_1): Clear range and points-to
	info when re-using a VN table entry.

2017-07-18  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/81418
	* tree-vect-loop.c (vectorizable_reduction): Properly compute
	vectype_in.  Verify that with lane-reducing reduction operations
	we have a single def-use cycle.

2017-07-17  Carl Love  <cel@us.ibm.com>
