@@ -1,3 +1,8 @@
+2017-07-18  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/81471
+	* gcc.target/i386/pr81471.c: New test.
+
 2017-06-18  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/81410
